# moonfield

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
assets/shaders/: basic_mesh.slang  basic_triangle.slang  fragment_shader.slang  mesh_shader.slang  shader.frag.slang  shader.vert.slang
crates/moonfield/: Cargo.toml
crates/moonfield-app/: Cargo.toml
crates/moonfield-base/: Cargo.toml
crates/moonfield-camera/: Cargo.toml
crates/moonfield-core/: Cargo.toml
crates/moonfield-core/src/: lib.rs  type_traits.rs
crates/moonfield-core/src/allocator/: handle.rs  multiborrow.rs  slot.rs
crates/moonfield-core/src/asset/: common.rs  loader.rs  mod.rs
crates/moonfield-core/src/ecs/: archetype.rs  borrow.rs  entities.rs  mod.rs  query.rs  world.rs
crates/moonfield-ecs/: Cargo.toml
crates/moonfield-editor/: Cargo.toml
crates/moonfield-editor/examples/: editor.rs
crates/moonfield-editor/src/: lib.rs  main.rs  runner.rs  ui.rs  viewport.rs
crates/moonfield-log/: Cargo.toml
crates/moonfield-log/src/: lib.rs  once.rs
crates/moonfield-lunaris/: Cargo.toml
crates/moonfield-lunaris/examples/: headless_triangle.rs
crates/moonfield-lunaris/src/: buffer.rs  command.rs  device.rs  error.rs  framebuffer.rs  headless.rs  instance.rs  lib.rs  pipeline.rs  plugin.rs  render_pass.rs  shader.rs  swapchain.rs
crates/moonfield-lunaris/tests/: headless_triangle.rs
crates/moonfield-math/: Cargo.toml
crates/moonfield-render/: Cargo.toml  README.md
crates/moonfield-rhi/: Cargo.toml
crates/moonfield-rhi/src/: adapter.rs  buffer.rs  command_buffer.rs  command_pool.rs  device.rs  instance.rs  lib.rs  pipeline.rs  queue.rs  resource.rs  shader_module.rs  shader_object.rs  surface.rs  swapchain.rs  types.rs
crates/moonfield-rhi/src/backend/: dx12.rs  mod.rs  vulkan.rs
crates/moonfield-rhi/src/backend/dx12/: adapter.rs  buffer.rs  command_buffer.rs  command_pool.rs  device.rs  instance.rs  mod.rs  pipeline.rs  queue.rs  shader_module.rs  surface.rs  swapchain.rs
crates/moonfield-rhi/src/backend/metal/: adapter.rs  buffer.rs  command_buffer.rs  command_pool.rs  device.rs  instance.rs  mod.rs  pipeline.rs  queue.rs  shader_module.rs  surface.rs  swapchain.rs
crates/moonfield-rhi/src/backend/vulkan/: adapter.rs  buffer.rs  command_buffer.rs  command_pool.rs  device.rs  instance.rs  mod.rs  pipeline.rs  queue.rs  shader_module.rs  shader_object.rs  surface.rs  swapchain.rs  utils.rs
crates/moonfield-rhi/src/types/: binding.rs  buffer.rs  error.rs  format.rs  mod.rs  pipeline.rs  render_pass.rs  surface.rs  vertex.rs
crates/moonfield-runtime/: Cargo.toml
crates/moonfield-runtime/src/: lib.rs
crates/moonfield-runtime/src/script/: api.rs  hot_reload.rs  mod.rs  module.rs  quickjs.rs  v8_runtime.rs
crates/moonfield-runtime/tests/: script.rs
crates/moonfield-script/: Cargo.toml
crates/moonfield-script-macros/: Cargo.toml
crates/moonfield-script-macros/src/: lib.rs
crates/moonfield-script-macros/tests/: extraction.rs
crates/moonfield-script/src/: input.rs  lib.rs  time.rs  window.rs
crates/moonfield-script/src/script/: api.rs  hot_reload.rs  mod.rs  module.rs  quickjs.rs  source_map.rs  v8_runtime.rs
crates/moonfield-script/tests/: script.rs
crates/moonfield-script/tests/scripts/: record_frame.js
crates/moonfield-shader/: Cargo.toml  build.rs  wrapper.h
crates/moonfield-shader/src/: lib.rs
crates/moonfield-shader/src/ffi/: mod.rs
crates/moonfield-shader/src/sys/: README.md  mod.rs
crates/moonfield-transform/: Cargo.toml
crates/moonfield-window/: Cargo.toml
crates/moonfield-winit/: Cargo.toml
crates/moonfield/src/: main.rs  script_api.rs
examples/: Cargo.toml  asset_demo.rs  build.rs  main.rs  moonfield_window.rs
examples/asset_example/: Cargo.toml
examples/asset_example/src/: main.rs
examples/triangle/: Cargo.toml
examples/triangle/src/: main.rs
examples/triangle/src/shaders/: triangle.metal
moonfield/: Cargo.toml
moonfield-core/: Cargo.toml
moonfield-core/src/: lib.rs  logging.rs  type_traits.rs
moonfield-examples/: Cargo.toml
moonfield-examples/src/: moonfield_window.rs
moonfield-graphics/: Cargo.toml
moonfield-graphics/src/: backend.rs  buffer.rs  error.rs  frame_buffer.rs  geometry_buffer.rs  lib.rs
moonfield-graphics/src/metal_backend/: buffer.rs  frame_buffer.rs  geometry_buffer.rs  mod.rs
moonfield-graphics/src/vulkan_backend/: frame_buffer.rs  mod.rs
moonfield-impl/: Cargo.toml
moonfield-impl/src/: lib.rs
moonfield-impl/src/engine/: error.rs  mod.rs
moonfield-impl/src/renderer/: error.rs  mod.rs
moonfield-impl/src/scene/: mod.rs
moonfield-impl/src/scene/graph/: mod.rs
moonfield-impl/src/scene/mesh/: mod.rs  vertex.rs
moonfield-impl/src/scene/node/: mod.rs
moonfield-rhi/: Cargo.toml
moonfield-rhi/src/: backend.rs  buffer.rs  descriptor.rs  error.rs  features.rs  geometry_buffer.rs  lib.rs  types.rs
moonfield-rhi/src/backend/: dx12.rs  metal.rs  mod.rs  vulkan.rs
moonfield-rhi/src/descriptors/: mod.rs
moonfield-rhi/src/dynamic/: adapter.rs  instance.rs  mod.rs
moonfield-rhi/src/metal/: adapter.rs  buffer.rs  frame_buffer.rs  geometry_buffer.rs  mod.rs
moonfield-rhi/src/rhi_types/: basic.rs  descriptors.rs  enums.rs  errors.rs  mod.rs
moonfield-rhi/src/traits/: adapter.rs  command_encoder.rs  device.rs  instance.rs  mod.rs  queue.rs  surface.rs
moonfield-rhi/src/types/: basic_descriptors.rs  basic_types.rs  device_traits.rs  enums.rs  errors.rs  mod.rs  pipeline_descriptors.rs  traits.rs
moonfield-rhi/src/vulkan/: frame_buffer.rs  mod.rs
moonfield/moonfield-app/: Cargo.toml
moonfield/moonfield-core/src/allocator/: handle.rs  mod.rs
moonfield/src/: lib.rs
platform/: generate_xcode.sh
platform/xcode/: Cargo.toml  generate.sh
platform/xcode/examples.xcodeproj/: project.pbxproj
platform/xcode/moonfield-window-example.xcodeproj/: project.pbxproj
scripts/: moonfield.d.ts  record_frame.js  record_frame.ts  tsconfig.json
(+61 files in other folders)
