[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
moonfield-app = { path = "crates/moonfield-app" }
moonfield-base = { path = "crates/moonfield-base" }
moonfield-script = { path = "crates/moonfield-script" }
moonfield-lunaris = { path = "crates/moonfield-lunaris" }
moonfield-winit = { path = "crates/moonfield-winit" }
thiserror = "2.0.18"
