[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
moonfield-app = { path = "crates/moonfield-app" }
moonfield-base = { path = "crates/moonfield-base" }
moonfield-ecs = { path = "crates/moonfield-ecs" }
moonfield-script = { path = "crates/moonfield-script" }
moonfield-script-macros = { path = "crates/moonfield-script-macros" }
moonfield-render = { path = "crates/moonfield-render" }
moonfield-log = { path = "crates/moonfield-log" }
moonfield-window = { path = "crates/moonfield-window" }
moonfield-winit = { path = "crates/moonfield-winit" }
thiserror = "2.0.18"
