[package]
name = "examples"
version = "0.1.0"
edition = "2024"

[dependencies]
moonfield-impl = { path = "../moonfield-impl" }
winit = { workspace = true }
env_logger = "0.10"

[features]
default = []


[[bin]]
name = "moonfield"
path = "main.rs"

[[bin]]
name = "moonfield_window"
path = "moonfield_window.rs"
