[package]
name = "examples"
version = "0.1.0"
edition = "2024"

[dependencies]
moonfield-impl = { path = "../moonfield-impl" }
moonfield-core = { path = "../moonfield-core" }
winit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []


[[bin]]
name = "moonfield"
path = "main.rs"

[[bin]]
name = "moonfield_window"
path = "moonfield_window.rs"
