[package]
name = "moonfield-examples"
version = "0.1.0"
edition = "2024"

# Examples configuration
[[example]]
name = "moonfield_window"
path = "src/moonfield_window.rs"

[dependencies]
moonfield = { path = "../moonfield" }
winit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["auto"]
# Platform-specific features
metal = ["moonfield/metal"]
vulkan = ["moonfield/vulkan"]
# Automatically enable appropriate backend based on target platform
auto = ["moonfield/auto"]
