[package]
name = "moonfield-graphics"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = { workspace = true }
objc2 = { workspace = true }
objc2-app-kit = { workspace = true }
objc2-metal = { workspace = true }
objc2-quartz-core = { workspace = true }
winit = { workspace = true }
tracing = { workspace = true }
