[package]
name = "moonfield-impl"
version = "0.1.0"
edition = "2024"


[dependencies]
moonfield-core ={ path = "../moonfield-core"}
moonfield-rhi = {path = "../moonfield-rhi"}
winit = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[features]
# Backend features
metal = ["moonfield-rhi/metal"]
vulkan = ["moonfield-rhi/vulkan"]
