[package]
name = "moonfield-rhi"
version = "0.1.0"
edition = "2024"

[dependencies]
moonfield-core = { path = "../moonfield-core" }

# Cross-platform dependencies
winit = { workspace = true }
tracing = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }
shader-slang = { workspace = true }
bitflags = { workspace = true }

# Vulkan dependencies - only included when vulkan feature is enabled
ash = { workspace = true, optional = true }
ash-window = { workspace = true, optional = true }

# macOS/iOS specific dependencies - only included when metal feature is enabled
objc2 = { workspace = true, optional = true }
objc2-app-kit = { workspace = true, optional = true }
objc2-core-foundation = { workspace = true, optional = true }
objc2-foundation = { workspace = true, optional = true }
objc2-metal = { workspace = true, optional = true }
objc2-quartz-core = { workspace = true, optional = true }

[features]
default = []
# Backend features
metal = [
    "dep:objc2",
    "dep:objc2-app-kit",
    "dep:objc2-core-foundation",
    "dep:objc2-foundation",
    "dep:objc2-metal",
    "dep:objc2-quartz-core",
]
vulkan = ["dep:ash", "dep:ash-window"]
