[package]
name = "moonfield-rhi"
version = "0.1.0"
edition = "2024"

[dependencies]
moonfield-core = { path = "../moonfield-core" }

# Cross-platform dependencies
winit = { workspace = true }
tracing = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }
shader-slang = { workspace = true }
bitflags = { workspace = true }
raw-window-handle = { workspace = true }

[features]
default = []
