[package]
name = "moonfield"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

# Library dependencies
[dependencies]
moonfield-core = { path = "../moonfield-core" }

[features]
default = []
# Backend features
metal = ["moonfield-graphics/metal", "moonfield-impl/metal"]
vulkan = ["moonfield-graphics/vulkan", "moonfield-impl/vulkan"]
# Auto feature selects appropriate backend based on platform
auto = []

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
moonfield-impl = { path = "../moonfield-impl", features = ["metal"] }
moonfield-graphics = { path = "../moonfield-graphics", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
moonfield-impl = { path = "../moonfield-impl", features = ["vulkan"] }
moonfield-graphics = { path = "../moonfield-graphics", features = ["vulkan"] }
