[package]
name = "moonfield-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = {workspace = true}
nalgebra = {workspace = true}
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
moonfield-transform = { workspace = true }
moonfield-math = { workspace = true }

[features]
default = []
