[package]
name = "moonfield-log"
version.workspace = true
edition.workspace = true

[features]
trace = ["tracing-error"]

[dependencies]
moonfield-app = { workspace = true }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.2"
tracing-error = { version = "0.2", optional = true }
