[package]
name = "moonfield-lunaris"
version.workspace = true
edition.workspace = true

[dependencies]
moonfield-app = { workspace = true }
moonfield-base = { workspace = true }
moonfield-ecs = { workspace = true }
moonfield-log = { workspace = true }
ash = "0.38.0"
ash-window = "0.13.0"
gpu-allocator = "0.28.0"
raw-window-handle = "0.6.2"
shader-slang = "0.1"
