[package]
name = "moonfield-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
moonfield-base = { workspace = true }
moonfield-core = { workspace = true }
moonfield-lunaris = { workspace = true }
v8 = "150.1.0"
rquickjs = { version = "0.6", optional = true }
notify = "6.1"
serde_json = "1.0"
anyhow = "1.0"

[features]
default = ["v8-backend"]
v8-backend = []
quickjs-backend = ["dep:rquickjs"]
