[package]
name = "moonfield-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
moonfield-base = { workspace = true }
moonfield-core = { workspace = true }
moonfield-lunaris = { workspace = true }
v8 = "150.1.0"
rquickjs = { version = "0.6", optional = true }
notify = "6.1"
serde_json = "1.0"
anyhow = "1.0"
# swc is only needed for QuickJS backend (no native TS support).
# V8 backend strips types natively via --strip-types flag.
swc_common = { version = "23", optional = true }
swc_ecma_ast = { version = "25", optional = true }
swc_ecma_parser = { version = "41", optional = true }
swc_ecma_visit = { version = "25", optional = true }
swc_ecma_transforms_typescript = { version = "51", optional = true }
swc_ecma_codegen = { version = "28", optional = true }

[features]
default = ["v8-backend"]
v8-backend = []
quickjs-backend = ["dep:rquickjs", "dep:swc_common", "dep:swc_ecma_ast", "dep:swc_ecma_parser", "dep:swc_ecma_visit", "dep:swc_ecma_transforms_typescript", "dep:swc_ecma_codegen"]
