[package]
name = "moonfield-script-macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "3", features = ["full"] }

# Integration tests expand `#[script_function]`, whose generated code refers
# to `::moonfield_script::script` types (HostValue, ScriptFunction).
[dev-dependencies]
moonfield-script = { workspace = true, features = ["v8-backend"] }