[package]
name = "moonfield-script"
version.workspace = true
edition.workspace = true

[dependencies]
moonfield-app = { workspace = true }
moonfield-base = { workspace = true }
moonfield-log = { workspace = true }
moonfield-render = { workspace = true }
moonfield-script-macros = { workspace = true }
v8 = "150.1.0"
rquickjs = { version = "0.6", optional = true }
notify = "6.1"
serde_json = "1.0"
regex = "1.11"

# swc dependencies — only needed for QuickJS backend (CJS transform + TS stripping)
swc_common = { version = "23", optional = true }
swc_ecma_ast = { version = "25", optional = true }
swc_ecma_parser = { version = "41", optional = true }
swc_ecma_transforms_typescript = { version = "51", optional = true }
swc_ecma_codegen = { version = "28", optional = true }
swc_ecma_transforms_module = { version = "51.0.0", optional = true }

[features]
default = ["v8-backend"]
v8-backend = []
quickjs-backend = ["dep:rquickjs", "swc_common", "swc_ecma_ast", "swc_ecma_parser", "swc_ecma_transforms_typescript", "swc_ecma_codegen", "swc_ecma_transforms_module"]
