[package]
name = "moonfield-script"
version.workspace = true
edition.workspace = true

[dependencies]
moonfield-app = { workspace = true }
moonfield-log = { workspace = true }
moonfield-script-macros = { workspace = true }
moonfield-window = { workspace = true }
v8 = "150.1.0"
rquickjs = { version = "0.6", optional = true, features = ["array-buffer"] }
notify = "8.2"
serde_json = "1.0"
sourcemap = "9"

# swc parser/AST — always available for module import analysis (both backends)
swc_common = "24"
swc_ecma_ast = "25"
swc_ecma_parser = "41"

# swc transforms — TS stripping is used by both backends; the CJS transform
# is only needed for the QuickJS module bundler
swc_ecma_transforms_typescript = "51"
swc_ecma_codegen = "28"
swc_ecma_transforms_module = { version = "51.0.0", optional = true }

[features]
default = ["v8-backend"]
v8-backend = []
quickjs-backend = [
    "dep:rquickjs",
    "swc_ecma_transforms_module",
]
