[package]
name = "moonfield"
version.workspace = true
edition.workspace = true

[[bin]]
name = "moonfield"
path = "src/main.rs"

[dependencies]
moonfield-app = { workspace = true }
moonfield-base = { workspace = true }
moonfield-log = { workspace = true }
moonfield-script = { workspace = true }
moonfield-render = { workspace = true }
moonfield-winit = { workspace = true }
