[package]
name = "moonfield"
version.workspace = true
edition.workspace = true

[[bin]]
name = "moonfield"
path = "src/main.rs"

[features]
default = ["v8-backend"]
v8-backend = ["moonfield-script/v8-backend", "dep:v8"]
quickjs-backend = ["moonfield-script/quickjs-backend", "dep:rquickjs"]

[dependencies]
moonfield-app = { workspace = true }
moonfield-base = { workspace = true }
moonfield-log = { workspace = true }
moonfield-script = { workspace = true }
moonfield-render = { workspace = true }
moonfield-window = { workspace = true }
moonfield-winit = { workspace = true }
v8 = { version = "150.1.0", optional = true }
rquickjs = { version = "0.12", optional = true, features = ["array-buffer"] }
