[package]
name = "triangle"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "triangle"
path = "src/main.rs"

[dependencies]
moonfield-core = { path = "../../crates/moonfield-core" }
moonfield-rhi = { path = "../../crates/moonfield-rhi" }
winit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytemuck = { workspace = true }